# OpenGL_testApp

./: CMakeLists.txt  README.md
include/: shader.h
include/glad/: glad.h
src/: fragmentShader.txt  glad.c  main.cpp  vertexShader.txt
